--- a/app/src/main/res/layout/activity_tribe_list.xml
+++ b/app/src/main/res/layout/activity_tribe_list.xml
@@ -23,11 +23,11 @@
     <include layout="@layout/content_tribe_list" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/profile_list_back_fab_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_person_add_white"/>
 
 </android.support.design.widget.CoordinatorLayout>
