--- a/app/src/main/res/layout/content_tribe_list.xml
+++ b/app/src/main/res/layout/content_tribe_list.xml
@@ -8,13 +8,68 @@
     tools:context="com.mlab.nonhlanhla.codetribeconnectadmin.TribeList"
     tools:showIn="@layout/activity_tribe_list">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="200dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <Button
+        android:id="@+id/nav_request"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Requested"
+        android:textColor="@android:color/white"
+        android:background="#94cb44"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/nav_accepted_request"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Accepted"
+        android:textColor="@color/white"
+        android:background="#94cb44"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/nav_rejected_request"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Declined"
+        android:textColor="@color/white"
+        android:background="#94cb44"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/nav_add_members"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Add Member"
+        android:textColor="@color/white"
+        android:background="#94cb44"
+        android:textStyle="bold" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
