--- a/app/src/main/res/layout/activity_user_logged_in.xml
+++ b/app/src/main/res/layout/activity_user_logged_in.xml
@@ -76,7 +76,7 @@
         <Button
             android:id="@+id/changeEmail"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#94cb44"
@@ -87,7 +87,7 @@
         <Button
             android:id="@+id/changePass"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#94cb44"
@@ -98,7 +98,7 @@
         <Button
             android:id="@+id/send"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#94cb44"
@@ -115,7 +115,7 @@
         <Button
             android:id="@+id/remove"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#94cb44"
