--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
             android:background="@null"
             android:text="@string/btn_forgot_password"
             android:textAllCaps="false"
-            android:textColor="@android:color/black" />
+            android:textColor="#94cb44" />
 
         <!-- Link to Login Screen -->
 
